--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "async": "^1.5.0",
     "interlude": "~1.1.0",
-    "yargs": "^3.6.0"
+    "yargs": "^3.6.0",
+    "lodash": "4.5.1"
   },
   "devDependencies": {
     "jscoverage": "^0.5.5",
