--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "interlude": "~1.1.0",
-    "yargs": "^3.6.0",
+    "yargs": "7.1.0",
     "lodash": "4.5.1"
   },
   "devDependencies": {
